<resources>
    <string name="app_name">Project 3 Frontend</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="email">Username</string>
    <string name="welcome">Login</string>
    <string name="register">Register</string>
    <string name="new_request">New Request</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="publish">Publish</string>
    <string name="username">Email</string>
    <string name="back_login">Back</string>
    <string name="profile">Profile</string>
    <string name="request">Request</string>
    <string name="find">Find</string>
    <string name="search_project">Search Projects</string>
    <string name="open_projects">Open Projects</string>
    <string name="search_project_button">Search</string>
    <string name="default_project_item">Default Project Item</string>
    <string name="pic_profile">pic_profile</string>
    <string name="ui_ux_designer_foodie_ukraine">ui_ux_designer_foodie_ukraine</string>
    <string name="_962">962</string>
    <string name="_49k">49k</string>
    <string name="_4_9k">_4_9k</string>
    <string name="_165">_165</string>
    <string name="posts">Post</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="tags">tags</string>
    <string name="stylish">Stylish</string>
    <string name="model">Model</string>
    <string name="runner">Runner</string>
    <string name="adventurous">Adventurous</string>
    <string name="collection">Collection</string>
    <string name="current_projects">Current Projects</string>
    <string name="view_all_projects_button">View All</string>
    <string name="users_username">users_username</string>
    <string name="back">back</string>
    <string name="change">change</string>
    <string name="Username">Username</string>
    <string name="budget">Budget</string>
    <string name="your_email">Email</string>
    <string name="your_username">"Proposer(Username) "</string>
    <string name="switch_anon">Publish Anonomously</string>
</resources>