<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".LandingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/viewHeader"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/header_background"
            app:layout_constraintTop_toTopOf="parent"/>
        <FrameLayout
            android:id="@+id/layoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/viewHeader"
            app:layout_constraintTop_toBottomOf="@+id/viewHeader">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="45dp"
                        android:gravity="center"
                        android:text="@string/pic_profile"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:id="@+id/textAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/ui_ux_designer_foodie_ukraine"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@id/textName"/>
                    <TextView
                        android:id="@+id/textPosts"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="#"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/textFollowers"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textAbout"/>
                    <TextView
                        android:id="@+id/textFollowers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="#"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/textFollowing"
                        app:layout_constraintStart_toEndOf="@id/textPosts"
                        app:layout_constraintTop_toBottomOf="@id/textAbout"/>
                    <TextView
                        android:id="@+id/textFollowing"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="#"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/textFollowers"
                        app:layout_constraintTop_toBottomOf="@id/textAbout"/>
                    <TextView
                        android:id="@+id/textPostsLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:text="@string/posts"
                        android:textColor="@color/colorTextSecondary"
                        app:layout_constraintEnd_toEndOf="@id/textPosts"
                        app:layout_constraintStart_toStartOf="@id/textPosts"
                        app:layout_constraintTop_toBottomOf="@id/textPosts"/>
                    <TextView
                        android:id="@+id/textFollowersLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:textAllCaps="true"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/textFollowers"
                        app:layout_constraintStart_toStartOf="@+id/textFollowers"
                        app:layout_constraintTop_toBottomOf="@+id/textFollowers"/>
                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="rating"
                        android:textAllCaps="true"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/textFollowing"
                        app:layout_constraintStart_toStartOf="@+id/textFollowing"
                        app:layout_constraintTop_toBottomOf="@+id/textFollowing"/>



                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_image"
            app:layout_constraintBottom_toTopOf="@+id/layoutProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layoutProfile"
            app:riv_border_width="1dp"
            app:riv_oval="true"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_add"
            android:tint="@color/white"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintRight_toRightOf="@+id/floatingActionButton2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutProfile"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
            app:layout_constraintLeft_toLeftOf="@+id/floatingActionButton"
            app:layout_constraintTop_toTopOf="@+id/floatingActionButton"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread"
            app:srcCompat="@drawable/ic_pen" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:tint="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
            app:layout_constraintLeft_toLeftOf="@+id/floatingActionButton2"
            app:layout_constraintTop_toTopOf="@+id/floatingActionButton2"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread"
            app:srcCompat="@drawable/ic_image" />

        <TextView
            android:id="@+id/textCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/current_projects"
            android:textAllCaps="true"
            android:textColor="@color/colorTextPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/floatingActionButton" />


        <!--        <HorizontalScrollView-->
<!--            android:id="@+id/layoutCollection"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:overScrollMode="never"-->
<!--            android:scrollbars="none"-->
<!--            app:layout_constraintTop_toBottomOf="@id/textCollection"-->
<!--            android:layout_marginTop="8dp">-->
<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->
<!--&lt;!&ndash;                <include/>&ndash;&gt;-->
<!--            </LinearLayout>-->

<!--        </HorizontalScrollView>-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
